# Wolf-Motor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Motor.h  MotorTest.c  Plan.txt  README.md  _build_helper  doit  fb.c  fb.h  fb_app.c  fb_test.cpp  fizz-buzz.c  fizz-buzz_app.c  fizz-buzz_test.cpp  gcc_build  hello.c  native_build  test_plan.org
cmake/: googletest.cmake  googletesthelper.cmake  motor.cmake
include/: Motor.h
src/: CMakeLists.txt  motor.c  tests
tests/: CMakeLists.txt  testlib.cpp
unit_tests/: CMakeLists.txt  main.cpp
unit_tests/ut_motor/: MotorTest.c  motor_test.cpp  motor_test.h
